Source/WebCore/html/canvas/WebGLFramebuffer.cpp
@@ -171,8 +171,11 @@ void WebGLFramebuffer::setAttachmentForBoundFramebuffer(GCGLenum target, GCGLenu
     setAttachmentInternal(attachment, entry);
     entryContextSetAttachment(entry, gl.get(), target, attachment);
 
-    if (attachmentCount != m_attachments.size())
-        drawBuffersIfNecessary(false);
+    // Apply immediately if bound for drawing; otherwise defer until next bind.
+    if (attachmentCount != m_attachments.size() && updateFilteredDrawBuffers(false)) {
+        if (target == GraphicsContextGL::DRAW_FRAMEBUFFER || target == GraphicsContextGL::FRAMEBUFFER)
+            applyFilteredDrawBuffers();
+    }
 }
 
 std::optional<WebGLFramebuffer::AttachmentObject> WebGLFramebuffer::getAttachmentObject(GCGLenum attachment) const
@@ -207,8 +210,10 @@ void WebGLFramebuffer::removeAttachmentFromBoundFramebuffer(const AbstractLocker
             break;
         }
     } while (checkMore);
-    if (attachmentCount != m_attachments.size())
-        drawBuffersIfNecessary(false);
+    if (attachmentCount != m_attachments.size() && updateFilteredDrawBuffers(false)) {
+        if (target == GraphicsContextGL::DRAW_FRAMEBUFFER || target == GraphicsContextGL::FRAMEBUFFER)
+            applyFilteredDrawBuffers();
+    }
 }
 
 void WebGLFramebuffer::deleteObjectImpl(const AbstractLocker& locker, GraphicsContextGL* context3d, PlatformGLObject object)
@@ -224,41 +229,51 @@ bool WebGLFramebuffer::isBound(GCGLenum target) const
     return context()->getFramebufferBinding(target) == this;
 }
 
+void WebGLFramebuffer::applyFilteredDrawBuffers()
+{
+    if (!m_drawBufferStatePendingSync)
+        return;
+    m_drawBufferStatePendingSync = false;
+    RefPtr context = this->context();
+    if (context->isWebGL2())
+        context->graphicsContextGL()->drawBuffers(m_filteredDrawBuffers);
+    else if (context->m_webglDrawBuffers)
+        context->graphicsContextGL()->drawBuffersEXT(m_filteredDrawBuffers);
+}
+
 void WebGLFramebuffer::drawBuffers(const Vector<GCGLenum>& bufs)
 {
     m_drawBuffers = bufs;
     m_filteredDrawBuffers.resize(m_drawBuffers.size());
     for (auto& buffer : m_filteredDrawBuffers)
         buffer = GraphicsContextGL::NONE;
-    drawBuffersIfNecessary(true);
+    updateFilteredDrawBuffers(true);
+    applyFilteredDrawBuffers();
 }
 
-void WebGLFramebuffer::drawBuffersIfNecessary(bool force)
+bool WebGLFramebuffer::updateFilteredDrawBuffers(bool force)
 {
     RefPtr context = this->context();
-    if (context->isWebGL2() || context->m_webglDrawBuffers) {
-        bool reset = force;
-        // This filtering works around graphics driver bugs on macOS.
-        for (size_t i = 0; i < m_drawBuffers.size(); ++i) {
-            if (m_drawBuffers[i] != GraphicsContextGL::NONE && m_attachments.contains(m_drawBuffers[i])) {
-                if (m_filteredDrawBuffers[i] != m_drawBuffers[i]) {
-                    m_filteredDrawBuffers[i] = m_drawBuffers[i];
-                    reset = true;
-                }
-            } else {
-                if (m_filteredDrawBuffers[i] != GraphicsContextGL::NONE) {
-                    m_filteredDrawBuffers[i] = GraphicsContextGL::NONE;
-                    reset = true;
-                }
+    if (!context->isWebGL2() && !context->m_webglDrawBuffers)
+        return false;
+    bool changed = force;
+    // This filtering works around graphics driver bugs on macOS.
+    for (size_t i = 0; i < m_drawBuffers.size(); ++i) {
+        if (m_drawBuffers[i] != GraphicsContextGL::NONE && m_attachments.contains(m_drawBuffers[i])) {
+            if (m_filteredDrawBuffers[i] != m_drawBuffers[i]) {
+                m_filteredDrawBuffers[i] = m_drawBuffers[i];
+                changed = true;
+            }
+        } else {
+            if (m_filteredDrawBuffers[i] != GraphicsContextGL::NONE) {
+                m_filteredDrawBuffers[i] = GraphicsContextGL::NONE;
+                changed = true;
             }
         }
-        if (reset) {
-            if (context->isWebGL2())
-                context->graphicsContextGL()->drawBuffers(m_filteredDrawBuffers);
-            else
-                context->graphicsContextGL()->drawBuffersEXT(m_filteredDrawBuffers);
-        }
     }
+    if (changed)
+        m_drawBufferStatePendingSync = true;
+    return changed;
 }
 
 GCGLenum WebGLFramebuffer::getDrawBuffer(GCGLenum drawBuffer)
